--- a/generator/package.json
+++ b/generator/package.json
@@ -10,6 +10,7 @@
   "author": "rosariofernandes51@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "rimraf": "^3.0.2"
   }
 }
